Sutter Health/src/objects/Benefit_Plan_Coverage__c.object
<CustomObject>
    <description>The Benefit Plan Coverage object is used to store all benefit plan and coverage information for SHP Members.</description>
    <fields>
        <fullName>Benefit_Grid_HCC_ID__c</fullName>
        <formula>IF(  ISBLANK(Benefit_Grid_Plan_ID__c ) ,  PlanCov_Bene_Plan_HCC_ID__c , HYPERLINK(&quot;javascript:if(typeof(srcUp)==&apos;function&apos;) {srcUp(&apos;/&quot;&amp;Benefit_Grid_Plan_ID__c&amp;&quot;?isdtp=vw&apos;);}&quot;+
&quot; else { var newwindow = window.open(&apos;/&quot;&amp;Benefit_Grid_Plan_ID__c&amp;&quot;&apos;);}&quot;,
PlanCov_Bene_Plan_HCC_ID__c,
&quot;_self&quot;
)
 )</formula>
        <label>Benefit Grid HCC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Grid_Plan_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field will be populated by system and will capture the Plan ID being pushed from HR to Benefit Plan Coverage object</description>
        <label>Benefit Grid Plan ID</label>
        <referenceTo>SHP_Benefit_Grid__c</referenceTo>
        <relationshipLabel>Benefit Plan Coverage</relationshipLabel>
        <relationshipName>Benefit_Plan_Coverage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Req no 3156 OLTP Employer</description>
        <label>Employer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Benefit Plan Coverages</relationshipLabel>
        <relationshipName>Benefit_Plan_Coverages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlanCov_Bene_Cover_Date_End__c</fullName>
        <label>Benefit Coverage End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlanCov_Bene_Cover_Date_Start__c</fullName>
        <label>Benefit Coverage Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlanCov_Bene_Cover_Desc__c</fullName>
        <description>Detailed description of the specific benefit coverage.</description>
        <label>Benefit Coverage Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanCov_Bene_Cover_HCC_ID__c</fullName>
        <label>Benefit Coverage HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanCov_Bene_Cover_HR_ID__c</fullName>
        <label>Benefit Coverage HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanCov_Bene_Cover_ID__c</fullName>
        <label>Benefit Coverage ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanCov_Bene_Cover_Name__c</fullName>
        <description>Name of the specific benefit coverage associated to a benefit plan.</description>
        <label>Benefit Coverage Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanCov_Bene_Plan_Date_End__c</fullName>
        <label>Benefit Plan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlanCov_Bene_Plan_Date_Start__c</fullName>
        <label>Benefit Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlanCov_Bene_Plan_HCC_ID__c</fullName>
        <label>Benefit Plan HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanCov_Bene_Plan_HR_ID__c</fullName>
        <label>Benefit Plan HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanCov_Bene_Plan_ID__c</fullName>
        <label>Benefit Plan ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanCov_Bene_Plan_Name__c</fullName>
        <label>Benefit Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanCov_Bene_Plan_Type__c</fullName>
        <description>Type of a specific benefit plan (HMO, PPO etc).</description>
        <label>Benefit Plan Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanCov_External_ID__c</fullName>
        <description>External ID used to match a benefit plan coverage record to the original record in HealthEdge when updating and/or inserting.  

Composite key created from the concatenation of PlanCov_Member_HR_ID__c + PlanCov_Bene_Plan_HR_ID__c.</description>
        <externalId>true</externalId>
        <inlineHelpText>HealthEdge Benefit Plan Coverage ID.</inlineHelpText>
        <label>Benefit Plan Coverage	 External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PlanCov_Member_Date_Effective__c</fullName>
        <label>Member Date Effective</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlanCov_Member_Date_Termination__c</fullName>
        <label>Member Date Termination</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlanCov_Member_HCC_ID__c</fullName>
        <label>Benefit Plan Member HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanCov_Member_HR_ID__c</fullName>
        <label>Benefit Plan Member  HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanCov_Member_ID__c</fullName>
        <description>The member ID associated with a specific benefit plan.</description>
        <label>Benefit Plan Member ID</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanCov_Member_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the Member object.</description>
        <label>Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Benefit Plan Coverage</relationshipLabel>
        <relationshipName>Benefit_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlanCov_Subscriber_HCC_ID__c</fullName>
        <description>Subscriber ID linked to a specific benefit plan.  A subscriber may have multiple members associated to them.</description>
        <label>Benefit Plan Subscriber HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanCov_Subscriber_HR_ID__c</fullName>
        <label>Benefit Plan Subscriber HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanCov_Subscriber_ID__c</fullName>
        <description>Subscriber ID linked to a specific benefit plan.  A subscriber may have multiple members associated to them.</description>
        <label>Benefit Plan Subscriber ID</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <label>Benefit Plan Coverage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>PlanCov_External_ID__c</columns>
        <columns>PlanCov_Bene_Cover_HCC_ID__c</columns>
        <columns>PlanCov_Bene_Cover_HR_ID__c</columns>
        <columns>NAME</columns>
        <columns>PlanCov_Bene_Cover_Desc__c</columns>
        <columns>PlanCov_Bene_Cover_Date_End__c</columns>
        <columns>PlanCov_Bene_Cover_Name__c</columns>
        <columns>PlanCov_Bene_Cover_Date_Start__c</columns>
        <columns>PlanCov_Member_Lookup__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>oltpbenefitplancov</fullName>
        <columns>PlanCov_Member_Lookup__c</columns>
        <columns>PlanCov_External_ID__c</columns>
        <columns>PlanCov_Bene_Cover_HCC_ID__c</columns>
        <columns>PlanCov_Bene_Cover_HR_ID__c</columns>
        <columns>NAME</columns>
        <columns>PlanCov_Bene_Cover_Desc__c</columns>
        <columns>PlanCov_Bene_Cover_Date_End__c</columns>
        <columns>PlanCov_Bene_Cover_Name__c</columns>
        <columns>PlanCov_Bene_Cover_Date_Start__c</columns>
        <columns>PlanCov_Bene_Plan_HCC_ID__c</columns>
        <columns>PlanCov_Bene_Plan_HR_ID__c</columns>
        <columns>PlanCov_Member_HCC_ID__c</columns>
        <columns>PlanCov_Member_HR_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>4/10/2015 3:00 PM</value>
        </filters>
        <label>oltp-benefit-plan-cov</label>
    </listViews>
    <nameField>
        <displayFormat>PLANCOV-{00000000}</displayFormat>
        <label>Benefit Plan Coverage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefit Plan Coverage</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>